--- a/src/Sytafe.Angular/src/app/pages/user/user.page.html
+++ b/src/Sytafe.Angular/src/app/pages/user/user.page.html
@@ -4,4 +4,6 @@
 <div class="animate__animated animate__fadeIn container">
     <p-card styleClass="mb-3 no-content" [header]="user.username" [subheader]="user.type"></p-card>
     <screen-time *ngIf="user.id" [userId]="user.id"></screen-time>
+    <div class="p-2"></div>
+    <used *ngIf="user.id" [userId]="user.id"></used>
 </div>
