--- a/src/Sytafe.Angular/src/styles.css
+++ b/src/Sytafe.Angular/src/styles.css
@@ -14,7 +14,8 @@ body {
 
 .container {
     margin: 0 auto;
-    padding-top: 10px;
+    padding-bottom: 65px;
+    padding-top: 85px;
     width: 100%;
 }
 
@@ -53,6 +54,7 @@ html {
 
 .p-menubar {
     border-radius: 0;
+    z-index: 1;
 }
 
 .p-menubar .p-menubar-root-list>.p-menuitem>.p-menuitem-link {
