--- a/src/Sytafe.Angular/src/app/components/used/used.component.html
+++ b/src/Sytafe.Angular/src/app/components/used/used.component.html
@@ -6,17 +6,17 @@
         <ng-template pTemplate="header">
             <tr>
                 <th>Day of Week</th>
-                <th>From</th>
-                <th>To</th>
-                <th>Minute</th>
+                <th class="text-right">From</th>
+                <th class="text-right">To</th>
+                <th class="text-right">Minute</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-data>
             <tr class="animate__animated animate__fadeIn">
                 <td>{{data.dayOfWeek}}</td>
-                <td>{{data.displayFrom}}</td>
-                <td>{{data.displayTo}}</td>
-                <td>{{data.totalMinutes}}</td>
+                <td class="text-right">{{data.displayFrom}}</td>
+                <td class="text-right">{{data.displayTo}}</td>
+                <td class="text-right">{{data.totalMinutes}}</td>
             </tr>
         </ng-template>
     </p-table>
