--- a/src/Sytafe.Angular/src/app/components/used/used.component.html
+++ b/src/Sytafe.Angular/src/app/components/used/used.component.html
@@ -16,7 +16,7 @@
                 <td>{{data.dayOfWeek}}</td>
                 <td class="text-right">{{data.displayFrom}}</td>
                 <td class="text-right">{{data.displayTo}}</td>
-                <td class="text-right">{{data.totalMinutes}}</td>
+                <td class="text-right">{{data.totalMinutesString}}</td>
             </tr>
         </ng-template>
     </p-table>
