--- a/src/Sytafe.Angular/src/app/pages/home/home.page.html
+++ b/src/Sytafe.Angular/src/app/pages/home/home.page.html
@@ -1,4 +1,6 @@
 <div class="animate__animated animate__fadeIn container">
     <p-card styleClass="mb-3 no-content" [header]="userInfo.username" [subheader]="userInfo.type"></p-card>
     <screen-time [userId]="userInfo.id"></screen-time>
+    <div class="p-2"></div>
+    <used [userId]="userInfo.id"></used>
 </div>
